--- a/project/LaborGuru_SPM_API/trunk/web/app.less
+++ b/project/LaborGuru_SPM_API/trunk/web/app.less
@@ -8,6 +8,7 @@
 @import "app/login/login.less";
 @import "app/customer/customer-list.less";
 @import "app/home/home.less";
+@import "app/customer/customer-info.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
