--- a/web/app.less
+++ b/web/app.less
@@ -9,11 +9,13 @@
 @import "app/customer/customer-list.less";
 @import "app/home/home.less";
 @import "app/customer/customer-info.less";
+@import "app/store/store-list.less";
+@import "app/store/details/show-details.less";
+@import "app/store/details/show-operationTime.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
-
 
 /* Personal preference for BS modal.  The LESS below makes the backdrop white and
    causes the modal to fade in rather than slide in. */
