--- a/web/app.less
+++ b/web/app.less
@@ -14,6 +14,109 @@
 @import "app/store/details/show-operationTime.less";
 /* Add Component LESS Above */
 
+.page-loading-container{
+  height: 100%;
+  width: 100%;
+  z-index: 1000000;
+  position: fixed;
+  left: 0;
+  top:0;
+  padding:0;
+  margin:0;
+}
+
+.page-loading-text{
+  color:#99999A;
+  margin: 5px;
+
+}
+
+.page-loading-main-content{
+  background:#414042;
+  height: 100%;
+  width: 100%;
+
+  position: absolute;
+  left: 0;
+  top:0;
+  padding:0;
+  margin:0;
+}
+
+.page-loading-container.loading-secondary .page-loading-main-content{
+  opacity: 0.5;
+}
+
+.page-loading-content{
+  position: absolute;
+  top: 50%; left: 50%;
+  margin-top: -75px;
+  margin-left: -150px;
+  height: 150px;
+
+  width:300px;
+  text-align: center;
+
+
+}
+
+.page-loading-content img{
+  height:80px;
+}
+
+.spinner {
+  margin: 100px auto;
+  width: 50px;
+  height: 40px;
+  text-align: center;
+  font-size: 10px;
+}
+
+.spinner > div {
+  background-color: #333;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+
+  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+@-webkit-keyframes sk-stretchdelay {
+  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
+  20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes sk-stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }  20% {
+    transform: scaleY(1.0);
+    -webkit-transform: scaleY(1.0);
+  }
+}
+
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
